crates/ox_content_renderer/src/html/tests/snapshots/ox_content_renderer__html__tests__blocks__render_block_quote_with_inline.snap
---
source: crates/ox_content_renderer/src/html/tests/blocks.rs
expression: html
---
<blockquote>
<p><strong>Note:</strong> This is important</p>
</blockquote>
