crates/ox_content_renderer/src/html/tests/snapshots/ox_content_renderer__html__tests__blocks__render_heading_id_uses_inline_text.snap
---
source: crates/ox_content_renderer/src/html/tests/blocks.rs
expression: html
---
<h2 id="api-index-guide"><strong>API</strong> <code>Index</code> <a href="./guide.md">Guide</a></h2>
