crates/ox_content_renderer/src/html/tests/snapshots/ox_content_renderer__html__tests__blocks__render_inline_toc_directive.snap
---
source: crates/ox_content_renderer/src/html/tests/blocks.rs
expression: html
---
<h1 id="title">Title</h1>
<nav class="ox-toc" aria-label="Table of contents">
<ul>
<li class="ox-toc__item ox-toc__item--depth-1"><a href="#title">Title</a></li>
<li class="ox-toc__item ox-toc__item--depth-2"><a href="#intro">Intro</a></li>
<li class="ox-toc__item ox-toc__item--depth-3"><a href="#api">API</a></li>
</ul>
</nav>
<h2 id="intro">Intro</h2>
<h3 id="api">API</h3>
