crates/ox_content_renderer/src/html/tests/snapshots/ox_content_renderer__html__tests__blocks__render_inline_toc_marker_is_suppressed_when_filtered_by_depth.snap
---
source: crates/ox_content_renderer/src/html/tests/blocks.rs
expression: html
---
<h2 id="intro">Intro</h2>
